Additional Documentation and Small Cleanup

--- a/zor-config.ini
+++ b/zor-config.ini
@@ -6,12 +6,12 @@
 DISK_DEV = /dev/disk/by-id/nvme-Samsung_SSD_960_PRO_1TB_S3EVNX0J802831N
 
 # The name of the ZFS root pool
-Examples: "rpool" or "sampro" if you want it named after the disk
+# Examples: "rpool" or "sampro" if you want it named after the disk
 POOL_NAME = sampro
 
 # The name of the dataset that will be the root for this OS installation.  Often
 # named after the OS version being installed
-# Examples: "bionic" or "eoan" 
+# Examples: "bionic" or "eoan"
 OS_DATASET = eoan
 
 # The release codename of the OS to be installed, used by debootstrap.  debootstrap manpage
@@ -23,7 +23,7 @@ RELEASE_CODENAME = eoan
 # Example: some-host-name
 HOSTNAME = precision-1219
 
-# Filesystem path to directory where cache files can be kept.  To speed up this script 
+# Filesystem path to directory where cache files can be kept.  To speed up this script
 # across reboots of the live environment, make this a path to parmanent storage (e.g. mounted
 # USB drive)
 # Examples "/tmp" or "/media/xubuntu/6BDE-9A86/zfs-on-root/cache"
